<resources>

    <string name="app_name">LaundryCustomer</string>

    <string name="cloud_http_server">http://portal.laundryarea.com/</string>
    <string name="local_http_server">http://192.168.1.100:11000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_do_it">Do It Yourself</string>
    <string name="title_saved_locations">Saved Locations</string>
    <string name="title_more_services">More Services</string>
    <string name="title_shop_information">Shop Information</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="locate">Locate</string>
    <string name="location">Location</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="enter_guest">Enter as Guest</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="e_receipts">E-Receipts</string>
    <string name="home">Home</string>
    <string name="home_greeting">So What do you want to do today?</string>
    <string name="home_yourself">Do it Yourself</string>
    <string name="home_pickup">Pickup &amp; Delivery</string>
    <string name="pickup_point">Pickup &amp; Point</string>
    <string name="home_more_services">More Services .. </string>
    <string name="send_message">Send Message</string>
    <string name="add_review">Add Review</string>
    <string name="what_rate">What\'s your Rate?</string>
    <string name="look_shop">Look for Shop</string>
    <string name="info">Info</string>
    <string name="review">Review</string>
    <string name="services">Services</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="hide">Hide</string>
    <string name="submit">Submit</string>
    <string name="type_message">Please type your message...</string>
    <string name="washer">Washer</string>
    <string name="dryer">Dryer</string>
    <string name="see_machine">See Machine Detail</string>
    <string name="scan">Scan</string>
    <string name="report_machine_text">Reminder do not exceed the \n maximum kilos!</string>
    <string name="report_machine">Report Machine</string>
    <string name="available">Available</string>
    <string name="min_load">Minimum Load</string>
    <string name="max_load">Maximum Load</string>
    <string name="report_content">Machine is not ready to use if \n found issue please click...</string>
    <string name="closing">Closing in 5 seconds</string>
    <string name="not_working">Not Working</string>
    <string name="no_water">No Water</string>
    <string name="no_heat">No Heat</string>
    <string name="machine_stop">Machine Stop</string>
    <string name="no_services">No Services</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="rider">Rider</string>
    <string name="scan_incorrect">This is invalid code</string>
    <string name="scan_success">Scan success</string>
    <string name="cash">Cash</string>
    <string name="g_cash">GCash</string>
    <string name="pay_maya">PayMaya</string>
    <string name="pre_paid">Prepaid</string>
    <string name="please_wait">Please Wait...</string>
    <string name="please_wait_content">While the system activate machine...</string>
    <string name="save_current_info">Saved Current Information</string>
    <string name="work">Work</string>
    <string name="others">Others</string>
    <string name="saved">Saved</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="per_load">Per Load</string>
    <string name="per_kilo">Per Kilo</string>
    <string name="per_item">Per Item</string>
    <string name="request_summary">Request Summary</string>
    <string name="regular_wash">Regular Wash (Per Load)</string>
    <string name="regular_dry">Regular Dry (Per Load)</string>
    <string name="ariel">Ariel</string>
    <string name="downy_passion">Downy Passion</string>
    <string name="total">Total</string>
    <string name="date">Date : </string>
    <string name="time">Time : </string>
    <string name="service_type">Service Type : </string>
    <string name="waiting_rider">Waiting for Rider \n to Accept</string>
    <string name="once_rider">Once Rider is confirmed \n You can not cancel.</string>
    <string name="instructions">Instructions: </string>
    <string name="bleach">Don\'t Bleach </string>
    <string name="loading_process">loading... </string>
    <string name="loading">loading</string>
    <string name="both">both</string>
    <string name="map">map</string>
    <string name="list">list</string>
    <string name="confirm">confirm</string>
    <string name="set">Set</string>
    <string name="select_shop">Shop not selected, please select shop first</string>

    <!-- apis -->
    <string name="api_prefix">/customercom/</string>
    <string name="url_login">tryCustomerLogin</string>

    <!-- request data to server apis-->
    <string name="url_get_home_categories">getHomeCategories</string>
    <string name="url_get_machine_list">getMachineList</string>
    <string name="url_request_uuid">requestUUID</string>
    <string name="url_get_shop_detail">getShopDetailData</string>
    <string name="url_submit_shop_review">submitShopReview</string>
    <string name="url_send_shop_message">sendShopMessage</string>
    <string name="url_get_machine_detail">getMachineDetailData</string>
    <string name="url_get_machine_services">getMachineServices</string>
    <string name="url_get_doit_issue">getDoitIssues</string>
    <string name="url_get_doit_machine">getDoitMachines</string>
    <string name="url_get_pickup_services">getPickupServices</string>
    <string name="url_get_service_order_instructions">getServiceOrderInstructions</string>
    <string name="url_get_shop_list">getShopList</string>
    <string name="url_get_profile_review">getProfileReview</string>

    <string name="loading_press">loading...</string>
</resources>