<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:textAppearance="@style/MenuTextViewStyle"
            app:itemTextAppearance="@style/MenuTextViewStyle"
            android:title="@string/my_profile"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/icon_receipts"
            android:title="@string/e_receipts" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
    </group>
</menu>