<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary"
    tools:context=".controller.menu.ui.home.HomeFragment">
    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_greeting"
                    android:textSize="20sp"
                    android:textColor="@color/black">
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_do_it"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/img_washing"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_laundry">
                </ImageView>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/home_yourself"
                    android:textSize="25sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_delivery"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/img_quilt"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_delivery">
                </ImageView>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/home_pickup"
                    android:textSize="25sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_more_services"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/img_clothes"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_services">
                </ImageView>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/home_more_services"
                    android:textSize="25sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/lay_empty_container"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/select_shop">
        </TextView>
    </LinearLayout>
</LinearLayout>