<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:padding="20dp"
        android:background="@color/color_light_yellow"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_review"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_dark">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/box_light">
            <EditText
                android:id="@+id/edt_review_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:padding="5dp"
                android:hint="@string/type_message"
                android:background="@null">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_rate"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/color_dark">
            </TextView>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <ImageView
                    android:id="@+id/img_mark1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/img_star_good">
                </ImageView>
                <ImageView
                    android:id="@+id/img_mark2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/img_star_good">
                </ImageView>
                <ImageView
                    android:id="@+id/img_mark3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/img_star_good">
                </ImageView>
                <ImageView
                    android:id="@+id/img_mark4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/img_star_good">
                </ImageView>
                <ImageView
                    android:id="@+id/img_mark5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/img_star_good">
                </ImageView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <LinearLayout
                android:id="@+id/lay_send"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_secondary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_secondary">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>