<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_location"
    android:orientation="vertical"
    tools:context=".controller.home.LocationActivity">

    <include
        layout="@layout/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <org.osmdroid.views.MapView
                android:id="@+id/view_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </org.osmdroid.views.MapView>
            <LinearLayout
                android:id="@+id/lay_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:gravity="right">

                    <LinearLayout
                        android:id="@+id/lay_confirm"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/btn_third">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="16sp">
                        </TextView>
                    </LinearLayout>

                </LinearLayout>

                <ListView
                    android:id="@+id/lst_shops"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:listitem="@layout/item_shop">
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:background="@color/color_transparent"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lay_both"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_secondary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/both"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_map"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/btn_secondary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_list"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/btn_secondary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>